refactoring of BioMartAnnotator, more tests